Bug 220210 - Bookmarks root is always English "Bookmarks" if using one profile named "default". r=p_ch@verizon.net, sr=jag@tty.nl